<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <name>${component.name}</name>
    <groupId>org.cetc.dataproc</groupId>
    <artifactId>dataproc</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <description>A library for creating and editing graph-like diagrams in JavaFX</description>

    <licenses>
        <license>
            <name>Eclipse Public License - v 1.0</name>
            <url>https://www.eclipse.org/legal/epl-v10.html</url>
        </license>
    </licenses>

    <properties>
        <component.name>Data Proc</component.name>
        <maven.build.timestamp.format>yyyymmddhhmm</maven.build.timestamp.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
        <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.javadoc.skip>true</maven.javadoc.skip>

        <org.eclipse.emf.ecore.version>2.28.0</org.eclipse.emf.ecore.version>
        <org.eclipse.emf.common.version>2.26.0</org.eclipse.emf.common.version>
        <org.eclipse.emf.ecore.xmi.version>2.17.0</org.eclipse.emf.ecore.xmi.version>
        <org.eclipse.emf.edit.version>2.17.0</org.eclipse.emf.edit.version>

        <junit.version>4.13.2</junit.version>

        <org.slf4j.version>1.7.36</org.slf4j.version>
        <org.apache.logging.log4j.version>2.18.0</org.apache.logging.log4j.version>
        <com.lmax.version>3.4.4</com.lmax.version>

        <org.openjfx.version>20</org.openjfx.version>
        <openjfx-monocle.version>jdk-11+26</openjfx-monocle.version>

        <lombok.version>1.18.42</lombok.version>

        <jackson-core.version>2.13.3</jackson-core.version>
        <jackson-dataformat-yaml.version>2.13.3</jackson-dataformat-yaml.version>
        <jackson-databind.version>2.13.3</jackson-databind.version>
        <jackson-dataformat-xml.version>2.13.3</jackson-dataformat-xml.version>

        <io.netty.version>4.1.76.Final</io.netty.version>

        <org.reflections.version>0.10.2</org.reflections.version>
        <org.yaml.version>1.31</org.yaml.version>


    </properties>


    <modules>
        <module>graph-editor-api</module>
        <module>graph-editor-core</module>
        <module>databus</module>
        <module>graph-editor-model</module>
        <module>tablefax</module>
        <module>common</module>
        <module>LZDP_Test</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.0</version>
                    <configuration>
                        <release>17</release>
                        <compilerArgs>
                            <arg>--add-exports=javafx.base/com.sun.javafx.collections=common</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
<!--                <plugin>-->
<!--                    <groupId>org.apache.maven.plugins</groupId>-->
<!--                    <artifactId>maven-surefire-plugin</artifactId>-->
<!--                    <version>2.22.2</version>-->
<!--                    <configuration>-->
<!--                        <skipTests>true</skipTests>-->
<!--                        <argLine>&#45;&#45;add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED -Dprism.order=sw -Dglass.platform=Monocle -Dmonocle.platform=Headless</argLine>-->
<!--                    </configuration>-->
<!--                    <dependencies>-->
<!--                        <dependency>-->
<!--                            <groupId>org.ow2.asm</groupId>-->
<!--                            <artifactId>asm</artifactId>-->
<!--                            <version>9.2</version>-->
<!--                        </dependency>-->
<!--                    </dependencies>-->
<!--                    <executions>-->
<!--                        <execution>-->
<!--                            <goals>-->
<!--                                <goal>test</goal>-->
<!--                            </goals>-->
<!--                        </execution>-->
<!--                    </executions>-->
<!--                </plugin>-->
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.2</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doclint>none</doclint>
                    <quiet>true</quiet>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <artifactId>maven-assembly-plugin</artifactId>-->
<!--                <version>3.3.0</version>-->
<!--                <configuration>-->
<!--                    <finalName>${project.name}-${project.version}</finalName>-->
<!--                    <descriptors>-->
<!--                        <descriptor>assembly/assembly.xml</descriptor>-->
<!--                    </descriptors>-->
<!--                    <outputDirectory>d://mengbao//</outputDirectory>-->
<!--                    <appendAssemblyId>true</appendAssemblyId>-->
<!--                </configuration>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <!-- <mainClass>入口类，main 方法所在位置</mainClass> -->
                            <mainClass>App</mainClass>
                        </manifest>
                        <manifestEntries><SplashScreen-Image>splash-screen.png</SplashScreen-Image></manifestEntries>
                    </archive>
                    <descriptorRefs>
                        <!-- jar 携带依赖 -->
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
